Add tests to workflows

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,6 +43,10 @@ jobs:
       with:
         go-version: 1.21
     
+    - name: Run tests
+      run: |
+        go test mcv_test.go 
+
     - name: Variables
       id: vars
       run: |
